# myTrainingProjects

./: .gitignore  feauture.txt  hello.txt
Cpp/c++connector  Mysql/: CMakeLists.txt  test.cpp
Cpp/c++connector  Mysql/lib/: INFO_BIN  INFO_SRC
Cpp/cthulhi_vs_people/: Game  README.md  clang-format  main.cpp  makefile  notes
Cpp/cthulhi_vs_people/header/: character.h  enemy.h  field.h  gamecharacter.h  hero.h  resources.h
Cpp/cthulhi_vs_people/src/: character.cpp  enemy.cpp  field.cpp  gamecharacter.cpp  resources.cpp
Cpp/tetris/: main.cpp
Cpp/thread/: 1_ex  1_ex.cpp  2_ex  2_ex.cpp  3_ex  3_ex.cpp  CMakeLists.txt  README.md
Cpp/web/server/: server.cpp  server_http
Cpp/web/socket/: socket  socket.cpp
Py/examples/array/: arr_graph.py
Py/examples/matrix/: examle_game_life_cell_aut.py  examle_game_tic_tac_toe.py  examle_matrix.py  example_numpy.py  example_numpy2.py  example_numpy3.py  example_numpy4.py
Py/examples/pyqt/: QMutex.py  minimizing.py  queue_and_thread.py
Py/exercises/array/: arr_ex_14_polykov_p9_search.py  arr_ex_15_polykov_p7_prime.py  arr_ex_16_polykov_p7_fibonacci.py  arr_graph.py  example_fib_for_16ex.py
Py/exercises/matrix/: matrix_ex_14_polykov_p10.py  matrix_ex_16_polykov_p10.py  matrix_ex_17_polykov_p10.py  matrix_ex_18_polykov_p10.py  matrix_ex_19_polykov_p10.py  matrix_ex_20_polykov_p10.py  matrix_ex_22_polykov_p10.py  matrix_ex_23_polykov_p10.py  matrix_ex_24_polykov_p10.py  matrix_ex_24_polykov_p10_debag.py  matrix_ex_25_polykov_p10.py  matrix_ex_25_polykov_p10_debag.py  matrix_ex_26_polykov_p10.py
test/: hellowTest2.txt
(+94 files in other folders)
